shared_memory_derive/tests/ui/str.stderr
error[E0277]: the trait bound `&'a str: shared_memory::cast::SharedMemCast` is not satisfied
 --> $DIR/str.rs:9:8
  |
9 |     x: &'a str,
  |        ^
  |        |
  |        the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'a str`
  |        help: consider removing 1 leading `&`-references
  |
  = help: the following implementations were found:
            <str as shared_memory::cast::SharedMemCast>
  = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `&'a str: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/str.rs:13:26
   |
13 | pub struct MyStruct2<'a>(&'a str);
   |                          ^
   |                          |
   |                          the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'a str`
   |                          help: consider removing 1 leading `&`-references
   |
   = help: the following implementations were found:
             <str as shared_memory::cast::SharedMemCast>
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `&'static str: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/str.rs:18:8
   |
18 |     x: &'static str,
   |        ^
   |        |
   |        the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'static str`
   |        help: consider removing 1 leading `&`-references
   |
   = help: the following implementations were found:
             <str as shared_memory::cast::SharedMemCast>
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

error[E0277]: the trait bound `&'static str: shared_memory::cast::SharedMemCast` is not satisfied
  --> $DIR/str.rs:22:28
   |
22 | pub struct MyStruct2Static(&'static str);
   |                            ^
   |                            |
   |                            the trait `shared_memory::cast::SharedMemCast` is not implemented for `&'static str`
   |                            help: consider removing 1 leading `&`-references
   |
   = help: the following implementations were found:
             <str as shared_memory::cast::SharedMemCast>
   = note: required by `shared_memory::cast::AssertIsSharedMemCast`

For more information about this error, try `rustc --explain E0277`.
